--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="section">
             <h3>Обо мне</h3>
-            <p>Я работаю системным администратором в гимназии. У меня 3 года опыта, преимущественно в среде Windows и с основами сетевых служб.</p>
+            <p>Я работаю системным администратором в Гимназии №19. У меня 3 года опыта, преимущественно в среде Windows и с основами сетевых служб.</p>
         </div>
 
         <div class="section">
