--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Портфолио — Ричи</title>
+    <title>Портфолио — Наиль Рашитович</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <h1>Ричи</h1>
-        <h2>Системный администратор в гимназии</h2>
+        <h2>Системный администратор в Гимназии #19</h2>
 
         <div class="section">
             <h3>Обо мне</h3>
