--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ричи</h1>
+        <h1>Наиль Рашитович</h1>
         <h2>Системный администратор в Гимназии #19</h2>
 
         <div class="section">
