--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
-            background-image: url('images/optimized_background.jpg');
+            background-image: url('optimized_background.jpg');
             background-size: cover;
             background-attachment: fixed;
             color: #2e2e2e;
