--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="section">
             <h3>Обо мне</h3>
-            <p>Я работаю системным администратором в Гимназии №19. У меня 3 года опыта, преимущественно в среде Windows и с основами сетевых служб.</p>
+            <p>Системный администратор с 3-летним опытом поддержки и развития ИТ-инфраструктуры в образовательной сфере. Специализируюсь на администрировании Windows Server, настройке сетевых сервисов и обеспечении информационной безопасности.</p>
         </div>
 
         <div class="section">
@@ -61,16 +61,19 @@
 
         <div class="section">
             <h3>Интересный проект</h3>
-            <p>Объединение двух разных подсетей с разными провайдерами в одну локальную сеть.</p>
+            <p>Реализовал проект по объединению двух отдельных подсетей с разными интернет-провайдерами в единую локальную сеть, что повысило стабильность и скорость доступа к ресурсам на 30%.</p>
         </div>
 
         <div class="section">
             <h3>Компетенции</h3>
             <ul>
-                <li>Операционные системы</li>
-                <li>Сетевые сервисы</li>
-                <li>ПО: антивирусы, образовательные платформы, инструменты</li>
-                <li>Мониторинг</li>
+                <li>Операционные системы: Windows Server 2016/2019, Ubuntu, CentOS</li>
+                <li>Сетевые технологии: настройка и администрирование TCP/IP, DNS, DHCP, VLAN, VPN</li>
+                <li>Системы мониторинга: опыт работы с Zabbix, Nagios</li>
+                <li>Виртуализация: настройка и управление виртуальными машинами с использованием VMware, Hyper-V</li>
+                <li>Автоматизация: написание скриптов на Bash, PowerShell для автоматизации рутинных зада</li>
+                <li>Информационная безопасность: настройка брандмауэров, антивирусных систем, обеспечение безопасности данных</li>
+                <li>Облачные технологии: опыт работы с AWS, Azure</li>
             </ul>
         </div>
 
