--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="section">
             <h3>Обо мне</h3>
-            <p>Системный администратор с 3-летним опытом поддержки и развития ИТ-инфраструктуры в образовательной сфере. Специализируюсь на администрировании Windows Server, настройке сетевых сервисов и обеспечении информационной безопасности.</p>
+            <p>м</p>
         </div>
 
         <div class="section">
@@ -65,15 +65,15 @@
         </div>
 
         <div class="section">
-            <h3>Компетенции</h3>
+            <h3>Профессиональные навыки</h3>
             <ul>
-                <li>Операционные системы: Windows Server 2016/2019, Ubuntu, CentOS</li>
-                <li>Сетевые технологии: настройка и администрирование TCP/IP, DNS, DHCP, VLAN, VPN</li>
-                <li>Системы мониторинга: опыт работы с Zabbix, Nagios</li>
-                <li>Виртуализация: настройка и управление виртуальными машинами с использованием VMware, Hyper-V</li>
-                <li>Автоматизация: написание скриптов на Bash, PowerShell для автоматизации рутинных зада</li>
-                <li>Информационная безопасность: настройка брандмауэров, антивирусных систем, обеспечение безопасности данных</li>
-                <li>Облачные технологии: опыт работы с AWS, Azure</li>
+                <li>ОС: Debian Linux, работа с командной строкой</li>
+                <li>Контейнеризация: Docker, Portainer</li>
+                <li>Веб-серверы: Nginx (как reverse-proxy)</li>
+                <li>Сетевые технологии: iptables, SSH-туннели, проброс портов</li>
+                <li>Системы хранения: Nextcloud, управление дисками (ext4, монтирование)</li>
+                <li>Базы данных: MariaDB/MySQL (в Docker)</li>
+                <li>Диагностика: анализ логов, отладка сетевых проблем</li>
             </ul>
         </div>
 
