--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
         <div class="section">
             <h3>Обо мне</h3>
-            <p>м</p>
+            <p>Системный администратор с 3-летним опытом поддержки и развития ИТ-инфраструктуры в образовательной сфере.
+
+Ответственный и целеустремлённый. Умею работать с большим объёмом информации, быстро осваивать новые инструменты. Есть опыт администрирования Linux-серверов, работы с Docker, настройки веб-сервисов. Ценю порядок в системах и документации. Легко нахожу общий язык в команде, готов помогать коллегам и учиться новому.</p>
         </div>
 
         <div class="section">
